Added myself to THANKS.txt

--- a/THANKS.txt
+++ b/THANKS.txt
@@ -169,6 +169,7 @@ John Draper for bug fixes.
 Alvaro Sanchez-Gonzalez for axis-dependent modes in multidimensional filters.
 Alessandro Pietro Bardelli for improvements to pdist/cdist and to related tests.
 Jonathan T. Siebert for bug fixes.
+Thomas Keck for adding new scipy.stats distributions used in HEP
 
 Institutions
 ------------
